Remove unused files and add geometric shape classes with methods for area and volume calculations